# Brain-Tumor-Segmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
scripts/: evaluation.py  inference.py  preprocessing.py  training.py
