[project]
name = "brain-tumor-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "Israel Reyes-Molina",email = "irm121117@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "monai (>=1.5.2,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "nibabel (>=5.4.2,<6.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "pytorch-ignite (>=0.5.3,<0.6.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
